// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Masonry lg viewport should output with a multiple child components 1`] = `
<div
  class="grid grid-cols-12 gap-0"
>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    >
      <div
        class="mb-0"
      >
        <div
          data-testid="child-1"
        >
          Child 1
        </div>
      </div>
    </div>
  </div>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    >
      <div
        class="mb-0"
      >
        <div
          data-testid="child-2"
        >
          Child 2
        </div>
      </div>
    </div>
  </div>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    />
  </div>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    />
  </div>
</div>
`;

exports[`Masonry lg viewport should output with a single child component 1`] = `
<div
  class="grid grid-cols-12 gap-0"
>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    >
      <div
        class="mb-0"
      >
        <div
          data-testid="child-1"
        >
          Child 1
        </div>
      </div>
    </div>
  </div>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    />
  </div>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    />
  </div>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    />
  </div>
</div>
`;

exports[`Masonry md viewport should output with a multiple child components 1`] = `
<div
  class="grid grid-cols-12 gap-0"
>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    >
      <div
        class="mb-0"
      >
        <div
          data-testid="child-1"
        >
          Child 1
        </div>
      </div>
    </div>
  </div>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    >
      <div
        class="mb-0"
      >
        <div
          data-testid="child-2"
        >
          Child 2
        </div>
      </div>
    </div>
  </div>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    />
  </div>
</div>
`;

exports[`Masonry md viewport should output with a single child component 1`] = `
<div
  class="grid grid-cols-12 gap-0"
>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    >
      <div
        class="mb-0"
      >
        <div
          data-testid="child-1"
        >
          Child 1
        </div>
      </div>
    </div>
  </div>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    />
  </div>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    />
  </div>
</div>
`;

exports[`Masonry sm viewport should output with a multiple child components 1`] = `
<div
  class="grid grid-cols-12 gap-0"
>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    >
      <div
        class="mb-0"
      >
        <div
          data-testid="child-1"
        >
          Child 1
        </div>
      </div>
    </div>
  </div>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    >
      <div
        class="mb-0"
      >
        <div
          data-testid="child-2"
        >
          Child 2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Masonry sm viewport should output with a single child component 1`] = `
<div
  class="grid grid-cols-12 gap-0"
>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    >
      <div
        class="mb-0"
      >
        <div
          data-testid="child-1"
        >
          Child 1
        </div>
      </div>
    </div>
  </div>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    />
  </div>
</div>
`;

exports[`Masonry xs viewport should output with a multiple child components 1`] = `
<div
  class="grid grid-cols-12 gap-0"
>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    >
      <div
        class="mb-0"
      >
        <div
          data-testid="child-1"
        >
          Child 1
        </div>
      </div>
      <div
        class="mb-0"
      >
        <div
          data-testid="child-2"
        >
          Child 2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Masonry xs viewport should output with a single child component 1`] = `
<div
  class="grid grid-cols-12 gap-0"
>
  <div
    class="relative text-left col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3"
  >
    <div
      class=""
    >
      <div
        class="mb-0"
      >
        <div
          data-testid="child-1"
        >
          Child 1
        </div>
      </div>
    </div>
  </div>
</div>
`;
